--- a/composer.json
+++ b/composer.json
@@ -20,6 +20,7 @@
         "fzaninotto/faker": "^1.9.1",
         "mockery/mockery": "^1.3.1",
         "nunomaduro/collision": "^5.0",
+        "ottaviano/faker-gravatar": "^0.2.0",
         "phpunit/phpunit": "^9.3"
     },
     "config": {
